<resources>
    <string name="app_name">BSAC Schedule test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_week_schedule">WeekScheduleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="radio_sub_1">подгруппа 1</string>
    <string name="radio__sub_2">подгруппа 2</string>
    <string name="group_name_input">номер группы</string>
    <string name="Submit_group">Submit</string>

    <string-array name="weeks_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="info">Info</string>
    <string name="about_app">About app</string>
    <string name="home">Home</string>
</resources>
