<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.adanilenka.bsacschedule.activities.FullScheduleActivity">
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/about_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/spinner"
        android:background="#ff00"
        android:title="ActionBar Spinner"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_user"
        android:icon="@drawable/calendar_plus"
        android:orderInCategory="300"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
</menu>
