<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#259238"
    tools:context=".activities.SelectGroupActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:ems="10"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:text="@string/group_name_input"
        android:textColor="@color/md_black_1000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="43dp" />

    <RadioGroup
        android:id="@+id/radioSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:includeFontPadding="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="208dp">

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio__sub_2" />

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_sub_1" />

    </RadioGroup>


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/Submit_group"
        android:background="#A60C00"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="426dp" />

</LinearLayout>